# connector-vision-auto-teaching-oqc-unloader

./: .gitignore  AGENTS.md  DEVELOPMENT_NOTES.md  DOWNLOAD_EXE.md  HANDOFF.md  INSIGHTS.md  README.md  ROADMAP.md  SPEC_1ST_GOAL.md  build_pin_exe.bat  build_pin_exe_onedir.bat  manifest_asinvoker.xml  pin_detection_gui.spec  pin_detection_gui_debug.spec  pin_detection_gui_onedir.spec  pyproject.toml  release_pin.bat  requirements-dev.txt  requirements-pin.txt  run_exe_test.bat  run_pin_gui.py  run_tests.bat  test_exe_train.bat  tools.py
docs/: AGENT_CAPABILITY_UPGRADE.md  EXE_ACTION24_CRASH_FIX.md  EXE_ACTION33_ISSUES.md  EXE_ACTION33_TEST_REPORT.md  EXE_ARTIFACT_ISSUES_STRATEGY.md  EXE_CRASH_ANALYSIS_ACTION25.md  EXE_GUI_ANALYSIS.md  EXE_LOCAL_TEST_SCENARIO.md  EXE_NONETYPE_FIX_PLAN.md  EXE_TEST_ANALYSIS.md  EXE_TEST_FEEDBACK_10_20_2.md  EXPERIENCE_REPLAY.md  EXPERT_EVALUATION_MODEL_10_20_1.md  EXPERT_EVALUATION_MODEL_V2.md  FINAL_EVALUATION_10_20_1.md  FINAL_EVALUATION_V2_10_20_1.md  GEOMETRY_REFINEMENT_DESIGN.md  PIN_DETECTION_ANALYSIS.md  PIN_DETECTION_EXPERIMENT_REPORT.md  REAL_FACTORY_DATA_TEST_MANUAL_EN.md  RELEASE_10_20.md  ROI_MANUAL_STRATEGY.md  ROI_PATH_VERIFICATION.md  TEST_REPORT_10_20.md  TROUBLESHOOTING.md  WEEKLY_HANDOFF_2026_03_06.md  WEEKLY_HANDOFF_2026_03_07.md  YOLO_EXE_VALIDATION_REPORT.md
legacy/: README.md  download_exe.bat  run_tests_standalone.py
pin_detection/: __init__.py  _model_path.py  annotation.py  cli.py  dataset.py  debug_log.py  excel_io.py  geometry_refinement.py  gui.py  inference.py  results_path.py  roi.py  roi_editor.py  (+1 more)
(+39 files in other folders)
