[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connector-vision-auto-teaching"
version = "0.1.0"
description = "Auto teaching for connector pin/mold position on OQC unloader machine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pyinstaller",
    "mcp-server-fetch",
]
gpu = [
    "cupy-cuda12x",
]

